--- a/_posts/2017-10-10-css-grids.markdown
+++ b/_posts/2017-10-10-css-grids.markdown
@@ -6,7 +6,7 @@ tags: css
 
 Links and snippets relating to layouts using css grids.
 
-## CSS Grids:
+## CSS Grids
 
 * [Grid by Example](http://gridbyexample.com)
 * [CSS Tricks - A Complete Guide to Grid](https://css-tricks.com/snippets/css/complete-guide-grid/)
