--- a/_posts/2017-11-03-rsync.md
+++ b/_posts/2017-11-03-rsync.md
@@ -4,6 +4,9 @@ date: '2017-11-03 16:00:00 -0700'
 tags: shell
 ---
 
+Rsync links.
+
 ## Useful links
 
 * [To Slash or Not To Slash?](http://qdosmsq.dunbar-it.co.uk/blog/2013/02/rsync-to-slash-or-not-to-slash/)
+* [Devhints Cheatsheet](https://devhints.io/rsync)
